// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Balance sheet tests Balance sheet page displays an empty view when no enough data is available 1`] = `
<div
  class="hHSwWn"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="kVxPac"
  >
    <div
      class="cbdbMT"
    >
      <div
        class="jGiENK"
      >
        <h1
          class="wbtfl"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="kcxkTo"
        >
          <button
            class="eVxMpZ"
            type="button"
          >
            Add new
          </button>
          <button
            class="eVxMpZ"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="iLArhq"
  >
    <div
      class="dOahFo"
    >
      <header
        class="hfAFDf"
      >
        <h2
          class="dYdCgw"
        >
          Balances
        </h2>
        <div>
          <nav
            class="dDdRjc"
          >
            <div
              class="dAAFPm"
            >
              all 
            </div>
            <div
              class="gDxUWx"
            >
              accounts 1
            </div>
            <div
              class="gDxUWx"
            >
              assets 0
            </div>
          </nav>
        </div>
      </header>
      <div
        class="fxCEJN"
      >
        <div
          class="bDObUX"
          data-testid="balance-group-cash"
        >
          <div
            class="ikvkAN"
          >
            <p
              class="bXnesS"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="lcpzDX"
            >
              $0
            </span>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                undefined
              </div>
              <span
                class="kNjgRF"
              >
                $0
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="sc-efQUeY gVKLTO"
                  href="#/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $0
              </span>
            </div>
          </div>
        </div>
        <div
          class="bDObUX"
          data-testid="balance-group-debt"
        >
          <div
            class="fEfsBV"
          >
            <p
              class="bXnesS"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="lcpzDX"
            >
              $0
            </span>
          </div>
          <div
            class="dKuPRQ"
          >
            No balances are available in this group.
          </div>
        </div>
        <div
          class="bDObUX"
          data-testid="balance-group-investments"
        >
          <div
            class="brONXK"
          >
            <p
              class="bXnesS"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="lcpzDX"
            >
              $0
            </span>
          </div>
          <div
            class="dKuPRQ"
          >
            No balances are available in this group.
          </div>
        </div>
        <div
          class="bDObUX"
          data-testid="balance-group-other-assets"
        >
          <div
            class="ePNAeY"
          >
            <p
              class="bXnesS"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="lcpzDX"
            >
              $0
            </span>
          </div>
          <div
            class="dKuPRQ"
          >
            No balances are available in this group.
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 1`] = `
<div
  class="hHSwWn"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="kVxPac"
  >
    <div
      class="cbdbMT"
    >
      <div
        class="jGiENK"
      >
        <h1
          class="wbtfl"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="kcxkTo"
        >
          <button
            class="eVxMpZ"
            type="button"
          >
            Add new
          </button>
          <button
            class="eVxMpZ"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="iLArhq"
  >
    <div
      class="dOahFo"
    >
      <header
        class="hfAFDf"
      >
        <h2
          class="dYdCgw"
        >
          Balances
        </h2>
        <div>
          <nav
            class="dDdRjc"
          >
            <div
              class="dAAFPm"
            >
              all 
            </div>
            <div
              class="gDxUWx"
            >
              accounts 7
            </div>
            <div
              class="gDxUWx"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="fxCEJN"
      >
        <div
          class="bDObUX"
          data-testid="balance-group-cash"
        >
          <div
            class="ikvkAN"
          >
            <p
              class="bXnesS"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="lcpzDX"
            >
              $10,700
            </span>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                savings
              </div>
              <span
                class="kNjgRF"
              >
                $6,000
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/account/Emergency Fund"
                >
                  Emergency Fund
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $6,000
              </span>
            </div>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                checking
              </div>
              <span
                class="kNjgRF"
              >
                $3,400
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $3,400
              </span>
            </div>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                cash
              </div>
              <span
                class="kNjgRF"
              >
                $1,300
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/account/Wallet"
                >
                  Wallet
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $1,300
              </span>
            </div>
          </div>
        </div>
        <div
          class="bDObUX"
          data-testid="balance-group-debt"
        >
          <div
            class="fEfsBV"
          >
            <p
              class="bXnesS"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="lcpzDX"
            >
              -$21,974
            </span>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                credit card
              </div>
              <span
                class="kNjgRF"
              >
                -$724
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/account/Bob's Juggernaut Visa"
                >
                  Bob's Juggernaut Visa
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                -$724
              </span>
            </div>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                auto
              </div>
              <span
                class="kNjgRF"
              >
                -$21,250
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/account/Toyota Auto Loan"
                >
                  Toyota Auto Loan
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                -$21,250
              </span>
            </div>
          </div>
        </div>
        <div
          class="bDObUX"
          data-testid="balance-group-investments"
        >
          <div
            class="brONXK"
          >
            <p
              class="bXnesS"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="lcpzDX"
            >
              $142,831
            </span>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                cryptocurrency
              </div>
              <span
                class="kNjgRF"
              >
                $86,920
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/asset/Bitcoin"
                >
                  Bitcoin
                </a>
                <div
                  class="bVdapH"
                >
                  Asset
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $69,420
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/asset/Ethereum"
                >
                  Ethereum
                </a>
                <div
                  class="bVdapH"
                >
                  Asset
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $17,500
              </span>
            </div>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                security
              </div>
              <span
                class="kNjgRF"
              >
                $33,125
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/asset/Tesla"
                >
                  Tesla
                </a>
                <div
                  class="bVdapH"
                >
                  Asset
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $30,000
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/asset/GameStop"
                >
                  GameStop
                </a>
                <div
                  class="bVdapH"
                >
                  Asset
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $3,125
              </span>
            </div>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                roth
              </div>
              <span
                class="kNjgRF"
              >
                $18,536
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/account/Alice's Roth IRA"
                >
                  Alice's Roth IRA
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $18,536
              </span>
            </div>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                401k
              </div>
              <span
                class="kNjgRF"
              >
                $4,251
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/account/Bob's 401k"
                >
                  Bob's 401k
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $4,251
              </span>
            </div>
          </div>
        </div>
        <div
          class="bDObUX"
          data-testid="balance-group-other-assets"
        >
          <div
            class="ePNAeY"
          >
            <p
              class="bXnesS"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="lcpzDX"
            >
              $53,000
            </span>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                vehicle
              </div>
              <span
                class="kNjgRF"
              >
                $38,500
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/asset/2022 Toyota RAV4"
                >
                  2022 Toyota RAV4
                </a>
                <div
                  class="bVdapH"
                >
                  Asset
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $38,500
              </span>
            </div>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                collectible
              </div>
              <span
                class="kNjgRF"
              >
                $14,500
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/asset/Pokemon Card Collection"
                >
                  Pokemon Card Collection
                </a>
                <div
                  class="bVdapH"
                >
                  Asset
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $14,500
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 2`] = `
<div
  class="hHSwWn"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="kVxPac"
  >
    <div
      class="cbdbMT"
    >
      <div
        class="jGiENK"
      >
        <h1
          class="wbtfl"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="kcxkTo"
        >
          <button
            class="eVxMpZ"
            type="button"
          >
            Add new
          </button>
          <button
            class="eVxMpZ"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="iLArhq"
  >
    <div
      class="dOahFo"
    >
      <header
        class="hfAFDf"
      >
        <h2
          class="dYdCgw"
        >
          Balances
        </h2>
        <div>
          <nav
            class="dDdRjc"
          >
            <div
              class="gDxUWx"
            >
              all 
            </div>
            <div
              class="dAAFPm"
            >
              accounts 7
            </div>
            <div
              class="gDxUWx"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="fxCEJN"
      >
        <div
          class="bDObUX"
          data-testid="balance-group-cash"
        >
          <div
            class="ikvkAN"
          >
            <p
              class="bXnesS"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="lcpzDX"
            >
              $10,700
            </span>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                savings
              </div>
              <span
                class="kNjgRF"
              >
                $6,000
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/account/Emergency Fund"
                >
                  Emergency Fund
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $6,000
              </span>
            </div>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                checking
              </div>
              <span
                class="kNjgRF"
              >
                $3,400
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $3,400
              </span>
            </div>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                cash
              </div>
              <span
                class="kNjgRF"
              >
                $1,300
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/account/Wallet"
                >
                  Wallet
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $1,300
              </span>
            </div>
          </div>
        </div>
        <div
          class="bDObUX"
          data-testid="balance-group-debt"
        >
          <div
            class="fEfsBV"
          >
            <p
              class="bXnesS"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="lcpzDX"
            >
              -$21,974
            </span>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                credit card
              </div>
              <span
                class="kNjgRF"
              >
                -$724
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/account/Bob's Juggernaut Visa"
                >
                  Bob's Juggernaut Visa
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                -$724
              </span>
            </div>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                auto
              </div>
              <span
                class="kNjgRF"
              >
                -$21,250
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/account/Toyota Auto Loan"
                >
                  Toyota Auto Loan
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                -$21,250
              </span>
            </div>
          </div>
        </div>
        <div
          class="bDObUX"
          data-testid="balance-group-investments"
        >
          <div
            class="brONXK"
          >
            <p
              class="bXnesS"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="lcpzDX"
            >
              $22,786
            </span>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                roth
              </div>
              <span
                class="kNjgRF"
              >
                $18,536
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/account/Alice's Roth IRA"
                >
                  Alice's Roth IRA
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $18,536
              </span>
            </div>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                401k
              </div>
              <span
                class="kNjgRF"
              >
                $4,251
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/account/Bob's 401k"
                >
                  Bob's 401k
                </a>
                <div
                  class="bVdapH"
                >
                  Account
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $4,251
              </span>
            </div>
          </div>
        </div>
        <div
          class="bDObUX"
          data-testid="balance-group-other-assets"
        >
          <div
            class="ePNAeY"
          >
            <p
              class="bXnesS"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="lcpzDX"
            >
              $0
            </span>
          </div>
          <div
            class="dKuPRQ"
          >
            No balances are available in this group.
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 3`] = `
<div
  class="hHSwWn"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="kVxPac"
  >
    <div
      class="cbdbMT"
    >
      <div
        class="jGiENK"
      >
        <h1
          class="wbtfl"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="kcxkTo"
        >
          <button
            class="eVxMpZ"
            type="button"
          >
            Add new
          </button>
          <button
            class="eVxMpZ"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="iLArhq"
  >
    <div
      class="dOahFo"
    >
      <header
        class="hfAFDf"
      >
        <h2
          class="dYdCgw"
        >
          Balances
        </h2>
        <div>
          <nav
            class="dDdRjc"
          >
            <div
              class="gDxUWx"
            >
              all 
            </div>
            <div
              class="gDxUWx"
            >
              accounts 7
            </div>
            <div
              class="dAAFPm"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="fxCEJN"
      >
        <div
          class="bDObUX"
          data-testid="balance-group-cash"
        >
          <div
            class="ikvkAN"
          >
            <p
              class="bXnesS"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="lcpzDX"
            >
              $0
            </span>
          </div>
          <div
            class="dKuPRQ"
          >
            No balances are available in this group.
          </div>
        </div>
        <div
          class="bDObUX"
          data-testid="balance-group-debt"
        >
          <div
            class="fEfsBV"
          >
            <p
              class="bXnesS"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="lcpzDX"
            >
              $0
            </span>
          </div>
          <div
            class="dKuPRQ"
          >
            No balances are available in this group.
          </div>
        </div>
        <div
          class="bDObUX"
          data-testid="balance-group-investments"
        >
          <div
            class="brONXK"
          >
            <p
              class="bXnesS"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="lcpzDX"
            >
              $120,045
            </span>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                cryptocurrency
              </div>
              <span
                class="kNjgRF"
              >
                $86,920
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/asset/Bitcoin"
                >
                  Bitcoin
                </a>
                <div
                  class="bVdapH"
                >
                  Asset
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $69,420
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/asset/Ethereum"
                >
                  Ethereum
                </a>
                <div
                  class="bVdapH"
                >
                  Asset
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $17,500
              </span>
            </div>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                security
              </div>
              <span
                class="kNjgRF"
              >
                $33,125
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/asset/Tesla"
                >
                  Tesla
                </a>
                <div
                  class="bVdapH"
                >
                  Asset
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $30,000
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/asset/GameStop"
                >
                  GameStop
                </a>
                <div
                  class="bVdapH"
                >
                  Asset
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $3,125
              </span>
            </div>
          </div>
        </div>
        <div
          class="bDObUX"
          data-testid="balance-group-other-assets"
        >
          <div
            class="ePNAeY"
          >
            <p
              class="bXnesS"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="lcpzDX"
            >
              $53,000
            </span>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                vehicle
              </div>
              <span
                class="kNjgRF"
              >
                $38,500
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/asset/2022 Toyota RAV4"
                >
                  2022 Toyota RAV4
                </a>
                <div
                  class="bVdapH"
                >
                  Asset
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $38,500
              </span>
            </div>
          </div>
          <div
            class="hAjhnN"
          >
            <div
              class="gNFmmA"
            >
              <div
                class="iYvrpT"
              >
                collectible
              </div>
              <span
                class="kNjgRF"
              >
                $14,500
              </span>
            </div>
            <div
              class="kwdnsA"
            >
              <div>
                <a
                  class="gVKLTO"
                  href="/asset/Pokemon Card Collection"
                >
                  Pokemon Card Collection
                </a>
                <div
                  class="bVdapH"
                >
                  Asset
                </div>
              </div>
              <span
                class="iFAMPX"
              >
                $14,500
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
